--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "axios-plus",
+  "name": "axios-plus1",
   "version": "1.0.0",
   "description": "Promise based HTTP client for the browser and node.js",
   "main": "index.js",
